@@ -52,9 +52,9 @@
                                 <right>-view_pad</right>
                                 <control type="group">
                                     <height>380</height>
+                                    <include>Defs_PosterBack</include>
                                     <control type="image" description="Poster">
                                         <bordersize>10</bordersize>
-                                        <include condition="!Skin.HasSetting(DisableShadows)">Defs_Shadow_10</include>
                                         <aspectratio scalediffuse="false">scale</aspectratio>
                                         <texture fallback="DefaultAddonNone.png" background="true" diffuse="diffuse/widgetposter.png">$VAR[Image_Poster]</texture>
                                     </control>
@@ -74,9 +74,9 @@
                                 <include>Animation_FocusBounce</include>
                                 <control type="group">
                                     <height>380</height>
+                                    <include>Defs_PosterBack</include>
                                     <control type="image" description="Poster">
                                         <bordersize>10</bordersize>
-                                        <include condition="!Skin.HasSetting(DisableShadows)">Defs_Shadow_10</include>
                                         <aspectratio scalediffuse="false">scale</aspectratio>
                                         <texture fallback="DefaultAddonNone.png" background="true" diffuse="diffuse/widgetposter.png">$VAR[Image_Poster]</texture>
                                     </control>
@@ -100,9 +100,9 @@
                                 <right>-view_pad</right>
                                 <control type="group">
                                     <height>350</height>
+                                    <include>Defs_PosterBack</include>
                                     <control type="image" description="Poster">
                                         <bordersize>10</bordersize>
-                                        <include condition="!Skin.HasSetting(DisableShadows)">Defs_Shadow_10</include>
                                         <aspectratio scalediffuse="false">scale</aspectratio>
                                         <texture fallback="DefaultAddonNone.png" background="true" diffuse="diffuse/landscape.png">$VAR[Image_Fanart]</texture>
                                     </control>
@@ -122,9 +122,9 @@
                                 <include>Animation_FocusBounce</include>
                                 <control type="group">
                                     <height>350</height>
+                                    <include>Defs_PosterBack</include>
                                     <control type="image" description="Poster">
                                         <bordersize>10</bordersize>
-                                        <include condition="!Skin.HasSetting(DisableShadows)">Defs_Shadow_10</include>
                                         <aspectratio scalediffuse="false">scale</aspectratio>
                                         <texture fallback="DefaultAddonNone.png" background="true" diffuse="diffuse/landscape.png">$VAR[Image_Fanart]</texture>
                                     </control>
@@ -148,9 +148,9 @@
                                 <right>-view_pad</right>
                                 <control type="group">
                                     <height>364</height>
+                                    <include>Defs_PosterBack</include>
                                     <control type="image" description="Poster">
                                         <bordersize>10</bordersize>
-                                        <include condition="!Skin.HasSetting(DisableShadows)">Defs_Shadow_10</include>
                                         <aspectratio scalediffuse="false">scale</aspectratio>
                                         <texture fallback="DefaultAddonNone.png" background="true" diffuse="diffuse/square.png">$INFO[ListItem.Icon]</texture>
                                     </control>
@@ -170,9 +170,9 @@
                                 <include>Animation_FocusBounce</include>
                                 <control type="group">
                                     <height>364</height>
+                                    <include>Defs_PosterBack</include>
                                     <control type="image" description="Poster">
                                         <bordersize>10</bordersize>
-                                        <include condition="!Skin.HasSetting(DisableShadows)">Defs_Shadow_10</include>
                                         <aspectratio scalediffuse="false">scale</aspectratio>
                                         <texture fallback="DefaultAddonNone.png" background="true" diffuse="diffuse/square.png">$INFO[ListItem.Icon]</texture>
                                     </control>
