@@ -1,5 +1,6 @@
 [B]0.9.16[/B]
 LEIA - add "see more" widget item
+LEIA - fix globalsearch backing panels
 Change seekbar seeking to a white nib
 Fix widget gap bug
 Gradient option
